# cmake_fetch_content_SDL2

./: CMakeLists.txt  main.cpp
